# 2D_Game

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: devcontainer.json
include/: Apples.hpp  Movement.hpp  Renderer.hpp  Snek.hpp  Utils.hpp
source/: Apples.cpp  Movement.cpp  Renderer.cpp  Snek.cpp  Utils.cpp  main.cpp
